--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,11 @@
     android:id="@+id/llMain"
     tools:context=".MainActivity">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="hi"/>
+
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
